--- a/index.html
+++ b/index.html
@@ -15,22 +15,44 @@
   </head>
   <body>
     <main role="main">
-      <div>
-        
-      </div>
+      <div class="order-container">
+        <div class="order-img">
+          <img src="images/illustration-hero.svg" alt="Illustration Hero" />
+        </div>
 
-      <div class="container"></div>
+        <div class="order-content">
+          <h1>Order Summary</h1>
+          <p>
+            You can now listen to millions of songs, audiobooks, and podcasts on
+            any device anywhere you like!
+          </p>
+          <!-- plan -->
+          <div class="order-content-plan">
+            <div class="order-content-plan-icon">
+              <img src="images/icon-music.svg" alt="" />
+            </div>
+            <div class="order-content-plan-text">
+              <h3>Annual Plan</h3>
+              <p>$59.99/year</p>
+            </div>
+            <span>Change</span>
+          </div>
+
+          <!-- payment -->
+          <div class="order-content-payment">
+            <button>Proceed to Payment</button>
+            <p>Cancel Order</p>
+          </div>
+        </div>
+      </div>
     </main>
-    Order Summary You can now listen to millions of songs, audiobooks, and
-    podcasts on any device anywhere you like! Annual Plan $59.99/year Change
-    Proceed to Payment Cancel Order
 
     <footer role="contentinfo">
       <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="#">Andhre</a>.
       </div>
     </footer>
   </body>
