--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Frontend Mentor | Order summary card</title>
   </head>
   <body>
-    <main role="main">
+    <main>
       <div class="order-container">
         <div class="order-img">
           <img src="images/illustration-hero.svg" alt="Illustration Hero" />
@@ -32,7 +32,7 @@
               <img src="images/icon-music.svg" alt="" />
             </div>
             <div class="order-content-plan-text">
-              <h3>Annual Plan</h3>
+              <h2>Annual Plan</h2>
               <p>$59.99/year</p>
             </div>
             <span>Change</span>
@@ -47,7 +47,7 @@
       </div>
     </main>
 
-    <footer role="contentinfo">
+    <footer>
       <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
