--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <!-- FONTAWESOME CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="dist/css/style.css" />
     <title>Frontend Mentor | Order summary card</title>
   </head>
@@ -52,7 +60,29 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Andhre</a>.
+        >. Coded by
+        <a
+          href="https://www.frontendmentor.io/profile/MizAndhre"
+          target="_blank"
+          >Andhre</a
+        >.
+
+        <div class="icons">
+          <a
+            href="https://github.com/MizAndhre"
+            target="_blank"
+            aria-label="Github"
+          >
+            <i class="fab fa-github"></i>
+          </a>
+          <a
+            href="https://codepen.io/mizandhre"
+            target="_blank"
+            aria-label="Codepen"
+          >
+            <i class="fab fa-codepen"></i>
+          </a>
+        </div>
       </div>
     </footer>
   </body>
